--- a/Components/SideBySide/_style.scss
+++ b/Components/SideBySide/_style.scss
@@ -78,7 +78,7 @@ flynt-component[name='SideBySide'] {
     }
 
     @media (min-width: $breakpoint-desktop) {
-      padding: 5rem;
+      padding: 3rem;
       block-size: 550px;
     }
   }
